--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "discord-api-types": "^0.22.0",
     "discord.js": "^14.3.0",
     "dotenv": "^10.0.0",
+    "express": "^4.18.2",
     "moment": "^2.29.2",
     "node-cron": "^3.0.0",
     "node-fetch": "^2.6.7",
